# llama-vim-adapter

./: AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start_fastapi.sh  test_curl_request.sh
src/main/: configuration.py  main.py
src/main/functional/: result.py
src/main/model/: llama_models.py
src/main/services/: fim_infill_service.py  infill_service.py
src/main/services/mistral/: mistral_fim_wrapper.py
src/main/services/openai/: open_ai_manager.py
src/tests/: test_it_infill.py  test_ut_infill.py
